--- a/app/src/main/res/layout/single_contact.xml
+++ b/app/src/main/res/layout/single_contact.xml
@@ -21,12 +21,24 @@
             android:layout_alignParentStart="true"
             android:fontFamily="sans-serif-thin"
             android:singleLine="true"
-            android:text="Title"
+            android:text="Name"
             android:paddingRight="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@android:color/black"
             android:textSize="24sp"
            />
+
+        <TextView
+            android:id="@+id/ph_no"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
+            android:layout_alignLeft="@id/txtTitle"
+            android:layout_alignStart="@+id/txtTitle"
+            android:layout_below="@id/txtTitle"
+            android:fontFamily="sans-serif-thin"
+            android:text="Phone Number"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
