--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
     <color name="primaryColor">#009688</color>
     <color name="primaryDark">#00796B</color>
+    <color name="fast_scroller_color">@color/accentColor</color>
 </resources>
