-Modularization -Implementaion of BottomSheet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,6 @@
         android:id="@+id/fragContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/appBar" />
+        android:layout_marginTop="?android:actionBarSize" />
 
 </RelativeLayout>
