--- a/app/src/main/res/layout/contact_tab.xml
+++ b/app/src/main/res/layout/contact_tab.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:scrollbars="none"/>
 
-    <com.cloudcontact.cloudcontact.ContactHandler.FastScroller
+    <com.cloudcontact.cloudcontact.FastScroller.FastScroller
         android:id="@+id/fastscroller"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
