--- a/app/src/main/res/layout/single_bottom_sheet.xml
+++ b/app/src/main/res/layout/single_bottom_sheet.xml
@@ -9,64 +9,57 @@
     app:mrl_rippleHover="true"
     app:mrl_rippleOverlay="true">
 
-    <RelativeLayout
-        android:id="@+id/sinlgeContact"
+    <LinearLayout
+        android:id="@+id/bottomSheetMenu"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="64dp"
         android:layout_alignParentTop="true"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/groupLetter"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="16dp"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/accentColor"
+        <ImageView
+            android:id="@+id/bottomSheetIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="20dp"
             android:textSize="@dimen/abc_text_size_large_material" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@id/groupLetter"
+            android:layout_height="64dp"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/white"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray" />
-
             <TextView
-                android:id="@+id/txtTitle"
-                android:layout_width="wrap_content"
+                android:id="@+id/bottomSheetTitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:paddingTop="16dp"
+                android:paddingTop="12dp"
                 android:singleLine="true"
                 android:text="@string/name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/primary_text_default_material_light"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/ph_no"
-                android:layout_width="wrap_content"
+                android:id="@+id/bottomSheetType"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/phone_no"
-                android:textColor="@color/secondary_text_default_material_light"
+                android:singleLine="true"
+                android:text="@string/name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/secondary_text_default_material_light"
                 android:textSize="14sp" />
         </LinearLayout>
 
-
-    </RelativeLayout>
+    </LinearLayout>
 </com.balysv.materialripple.MaterialRippleLayout>
 
