--- a/app/src/main/res/layout/single_bottom_sheet.xml
+++ b/app/src/main/res/layout/single_bottom_sheet.xml
@@ -3,7 +3,8 @@
     android:id="@+id/feedbackRipple"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:mrl_rippleColor="@color/accentColor"
+    app:mrl_rippleColor="@color/rippleColor"
+    app:mrl_rippleAlpha="0.2"
     app:mrl_rippleDuration="350"
     app:mrl_rippleFadeDuration="75"
     app:mrl_rippleHover="true"
