--- a/app/src/main/res/layout/single_contact.xml
+++ b/app/src/main/res/layout/single_contact.xml
@@ -3,7 +3,7 @@
     android:id="@+id/feedbackRipple"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:mrl_rippleColor="@color/accentColor"
+    app:mrl_rippleColor="@color/rippleColor"
     app:mrl_rippleDuration="350"
     app:mrl_rippleFadeDuration="75"
     app:mrl_rippleHover="true"
