--- a/app/src/main/res/layout/slide_out_menu.xml
+++ b/app/src/main/res/layout/slide_out_menu.xml
@@ -22,5 +22,5 @@
         android:id="@+id/slideOutMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="none" />
+        android:isScrollContainer="true"/>
 </LinearLayout>
