--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -14,6 +14,7 @@
     <color name="card_shadow_1">#d4d4d4</color>
     <color name="card_shadow_2">#dddddd</color>
     <color name="card_detailing">#eee</color>
-
     <color name="black_overlay">#66000000</color>
+
+    <color name="rippleColor">@color/ripple_material_light</color>
 </resources>
