--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="colorControlNormal">@color/primaryColor</item>
-        <item name="colorControlActivated">@color/accentColor</item>
+        <item name="colorControlActivated">@null</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="actionMenuTextColor">@android:color/white</item>
 
