-fix bug in layout -fix bug in BottomSheet initialization

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
     <FrameLayout
         android:id="@+id/fragContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:translationY="?attr/actionBarSize" />
+        android:layout_height="match_parent"/>
 
     <include
         android:id="@+id/appBar"
