--- a/app/src/main/res/layout/contact_frag.xml
+++ b/app/src/main/res/layout/contact_frag.xml
@@ -9,6 +9,7 @@
         android:layout_height="48dp"
         app:accentColor="@android:color/white"
         app:primaryColor="@color/primaryColor"
+        android:layout_marginTop="?actionBarSize"
         app:textColor="#FFFFFF" />
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
