--- a/app/src/main/res/layout/slide_out_menu.xml
+++ b/app/src/main/res/layout/slide_out_menu.xml
@@ -8,15 +8,26 @@
     android:paddingBottom="8dp"
     android:background="@color/card_background">
 
-    <TextView
-        android:id="@+id/bottomSheetTitleName"
-        android:layout_width="fill_parent"
-        android:layout_height="56dp"
-        android:padding="16dp"
-        android:textColor="@color/primary_text_default_material_light"
-        android:text="@string/name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="16sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/bottomSheetTitleName"
+            android:layout_width="fill_parent"
+            android:layout_height="56dp"
+            android:padding="16dp"
+            android:textColor="@color/primary_text_default_material_light"
+            android:text="@string/name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="16sp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/add_to_contacts_btn"
+            android:text="Add To Contacts"/>
+    </LinearLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/slideOutMenu"
