--- a/app/src/main/res/layout/slide_out_menu.xml
+++ b/app/src/main/res/layout/slide_out_menu.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
-    android:orientation="vertical"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:background="@color/card_background">
+    android:background="@color/transparent"
+    android:clickable="false"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/layoutPadding"
+            android:layout_width="match_parent"
+            android:layout_height="46dp" />
+
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/toolbar_shadow_inverted" />
+
         <TextView
             android:id="@+id/bottomSheetTitleName"
             android:layout_width="fill_parent"
             android:layout_height="56dp"
+            android:background="@color/card_background"
+            android:gravity="bottom"
             android:padding="16dp"
-            android:textColor="@color/primary_text_default_material_light"
             android:text="@string/name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/primary_text_default_material_light"
             android:textSize="16sp" />
-        <Button
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/slideOutMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/add_to_contacts_btn"
-            android:text="Add To Contacts"/>
+            android:background="@color/card_background"
+            android:isScrollContainer="true"
+            android:paddingBottom="8dp" />
     </LinearLayout>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/slideOutMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:isScrollContainer="true"/>
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_to_contacts_btn"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_gravity="top|right"
+        android:clickable="true"
+        android:src="@drawable/ic_person_add_black_24dp"
+        android:tint="@android:color/background_light" />
+</FrameLayout>
